<resources>
    <string name="app_name">Doctor’s Appointment</string>
    <string name="doctos_s_appointment">Doctos\'s Appointment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="signup_now">Signup now</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have account?</string>
    <string name="enter_name_optional">Enter Name (optional)</string>
    <string name="enter_phone_number_optional">Enter Phone Number (optional)</string>
    <string name="select_doctor">Select doctor</string>
    <string name="appointments">Appointments</string>
    <string name="time">Time</string>
    <string name="total_slot">Total Slot</string>
    <string name="available_slot">Available Slot</string>
    <string name="slot_status">Slot Status</string>
    <string name="select_a_doctor_to_view_his_appointments">Select a doctor to view his appointments.</string>
    <string name="profile_icon">profile icon</string>
    <string name="navigate_back_icon">navigate back icon</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="view_nschedule">View</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="see_all_your_booked_appointment">See all your booked appointment</string>
</resources>