<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dashBoard.profile.ProfileFragment"
    android:padding="@dimen/_8sdp">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:text="@string/do_you_want_to_logout" />

    <Button
        android:id="@+id/btnLogout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvShowBookedAppnt"
        app:layout_constraintTop_toBottomOf="@id/btnLogout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all_your_booked_appointment"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBookedAppnt"
        app:layout_constraintTop_toBottomOf="@+id/tvShowBookedAppnt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:paddingBottom="@dimen/_50sdp"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pbLoading"
        app:layout_constraintTop_toBottomOf="@id/tvShowBookedAppnt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>